--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                   </a>
                   <span>Google Analitcs</span>
                 </div>
-              </div>
-              <div class="container-curso2">
+              
+              <!-- <div class="container-curso2"> -->
                 <div class="curso3">
                   <a
                     href="https://www.credly.com/badges/701dd854-5948-4f1f-aea8-5ff95f3e365d/linked_in_profile"
@@ -154,21 +154,21 @@
                 </div>
 
                 <div class="container-webs">
-                  <div class="container-web">
-                    <a href="https://cvvtecnologia.vercel.app/" target="_blank"
-                      ><span>CVV Tecnologia</span
-                      ><img src="img/cvvtec.jpg" alt="" />
+                  <!-- <div class="container-web">
+                    <a href="#" target="_blank"
+                      ><span></span
+                      ><img src="img/cvvtec" alt="" />
                     </a>
                   </div>
 
                   <div class="container-web">
                     <a
-                      href="https://portfolio-pied-five-72.vercel.app/"
+                      href="#"
                       target="_blank"
-                      ><span>Calhas e Rufos</span>
-                      <img src="img/port.jpg" alt="" />
+                      ><span></span>
+                      <img src="img/port" alt="" />
                     </a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
