--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="container-caixa1">
               <div class="container-link2">
-                <h1>Back-end com Python</h1>
+                <h1>Back-end Python</h1>
                 <div class="container-dropdown">
                   <ul>
                     <li>
@@ -224,7 +224,7 @@
                 </div>
               </div>
               <div class="container-link3">
-                <h1>Back-end com Java</h1>
+                <h1>Back-end Java</h1>
                 <div class="container-dropdown2">
                   <ul>
                     <li>
