--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />    
+    <link rel="shortcut icon" href="img/icons8-digitar-66.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Darlington+Signature&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Aprendendo a Programar</title>
   </head>
   <body>
     <div class="container-box">
