melhorei a responsividade do meu portefólio

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           </div>
         </div>
       </div>
+      <!-- -----------------------------------------FIM-----------------------------------------------  -->
       <div class="container-end" id="fim">
         <div class="container-end0">
           <div class="container-end1">
