Correção do menu hamburguer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
           <h1>Aprendendo a Programar</h1>
         </div>
         </div>
-        <div class="container-img"><img src="img/foto.jpeg" alt="" /></div>
+        
+        <div class="container-img"><img id="mov1" src="img/foto.jpeg"/></div>
         <h2>Cristiano Isaias da Silva</h2>
       </div>
       <!-- ---------------------------------------------MEIO----------------------------------------------- -->
@@ -313,7 +314,7 @@
 
           <div class="container-rede3">
             <a
-              href="https://wa.me/5511989517393?text=Ol%C3%A1%21%20Bem%20de%20Vindo%20ao%20meu%20Portfólio...."
+              href="https://wa.me/5511989517393?text=Ol%C3%A1%21%20..."
               target="_blank"
               ><img src="/img/zap.jpeg" alt=""
             /></a>
@@ -321,5 +322,7 @@
         </div>
       </div>
     </div>
+         <script src="js/script.js"></script>   
   </body>
+  
 </html>
